# celebrity_fishy_faces

./: .gitignore  CMakeLists.txt  detect.cpp  detect.h  main.cpp  options.cpp  options.h
scripts/: extract_faces.py  format_dataset.py
